statefulset-demo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mystatefulset
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: <ServiceName>
  replicas: 3
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
          name: web
        volumeMounts:
        - name: mongo-persistent
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-persistent
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
