express-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  type: LoadBalancer
  selector:
    app: express
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    nodePort: 30000
