express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mongo-express
  labels:
    name: ingress-mongo-express
spec:
  rules:
  - host: google.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: express-service
            port:
              number: 8081
